--- a/.github/workflow-templates/avo-simple-workflow.yml
+++ b/.github/workflow-templates/avo-simple-workflow.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Avocado Special CI
+name: Avocado Simple CI
 
 # Controls when the workflow will run
 on:
